# aws-crt-cpp

./: .clang-tidy  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  NOTICE  README.md  VERSION  builder.json  format-check.sh  make-docs.py  make_pr.py  make_pr_readme.md  update-version.sh
.builder/actions/: build_crt.py  crt-ci-prep.py  debug_test.py  elasticurl_tests.py
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml
.github/ISSUE_TEMPLATE /: bug-report.yml  config.yml
.github/scripts/: install-latest-llvm.sh
.github/workflows/: ci-clang-latest.yml  ci-slow.yml  ci.yml  clang-format.yml  codeql.yml  docs.yml  lint.yml  mac-osx-ci.yml  main.yml  nightly.yml  release.yml
aws-common-runtime/: CMakeLists.txt
aws-common-runtime/aws-c-event-stream/: CMakeLists.txt  builder.json
aws-common-runtime/aws-c-event-stream/.github/workflows/: ci.yml  clang-format.yml
aws-common-runtime/aws-c-event-stream/cmake/: aws-c-event-stream-config.cmake
aws-common-runtime/aws-c-event-stream/include/aws/event-stream/: event_stream.h
aws-common-runtime/aws-c-event-stream/source/: event_stream.c
aws-common-runtime/aws-c-event-stream/tests/: CMakeLists.txt  message_deserializer_test.c  message_serializer_test.c  message_streaming_decoder_test.c
aws-common-runtime/aws-checksums/: CMakeLists.txt  build-deps.sh  builder.json  format-check.sh
aws-common-runtime/aws-checksums/.github/workflows/: ci.yml
aws-common-runtime/aws-checksums/source/arm/: crc32c_arm.c
aws-common-runtime/aws-checksums/source/generic/: crc32c_null.c
aws-common-runtime/aws-checksums/source/intel/visualc/: visualc_crc32c_sse42.c
aws-common-runtime/aws-checksums/tests/: CMakeLists.txt  crc_test.c
aws-common-runtime/cmake/: BuildAwsCAuth.cmake  BuildAwsCCal.cmake  BuildAwsCCommon.cmake  BuildAwsCCompression.cmake  BuildAwsCHTTP.cmake  BuildAwsCHttp.cmake  BuildAwsCIO.cmake  BuildAwsCMqtt.cmake  BuildS2N.cmake
canary/: CMakeLists.txt  CanaryApp.cpp  CanaryApp.h  CanaryUtil.cpp  CanaryUtil.h  CustomHostResolver.cpp  CustomHostResolver.h  MeasureTransferRate.cpp  MeasureTransferRate.h  MeasureTransferRateStream.cpp  MeasureTransferRateStream.h  MetricsPublisher.cpp  MetricsPublisher.h  MultipartTransferProcessor.cpp  MultipartTransferProcessor.h  MultipartTransferState.cpp  MultipartTransferState.h  S3ObjectTransport.cpp  S3ObjectTransport.h  TransferState.cpp  TransferState.h  benchmark.sh  build.sh  main.cpp
clang-tidy/: run-clang-tidy.sh
cmake/: AwsCheckHeadersCxx.cmake  AwsGetVersion.cmake  CRTMinVersions.cmake  EnforceSubmoduleVersions.cmake  aws-crt-cpp-config.cmake
codebuild/: CanaryWrapper_Classes.py  CanaryWrapper_MetricFunctions.py  common-linux.sh  common-posix.sh  common-windows.bat  create-projects.py  linux-clang6-x64.yml  linux-gcc-4x-x86.yml  linux-gcc-5x-x64.yml  linux-gcc-6x-x64.yml  linux-gcc-7x-x64.yml  linux-integration-tests.yml  linux-mqtt5-tests.yml  mqtt5-cpp-canary-test.yml  mqtt5_test_setup.sh
docs/: Api_8cpp.html  Api_8h.html  Api_8h_source.html  Bootstrap_8cpp.html  Bootstrap_8h.html  Bootstrap_8h_source.html  CMakeLists_8txt.html  CODE__OF__CONDUCT_8md.html  CONTRIBUTING_8md.html  ChannelHandler_8cpp.html  Config_8h.html  Config_8h_source.html  Credentials_8cpp.html  Credentials_8h.html  Credentials_8h_source.html  DateTime_8cpp.html  DateTime_8h.html  DateTime_8h_source.html  EventLoopGroup_8cpp.html  EventLoopGroup_8h_source.html  Exports_8h.html  Exports_8h_source.html  HMAC_8cpp.html  HMAC_8h_source.html  Hash_8cpp.html  Hash_8h.html  Hash_8h_source.html  HostResolver_8cpp.html  HostResolver_8h.html  HostResolver_8h_source.html  HttpConnectionManager_8cpp.html  HttpConnectionManager_8h.html  HttpConnection_8cpp.html  HttpConnection_8h_source.html  HttpProxyStrategy_8cpp.html  HttpRequestResponse_8cpp.html  HttpRequestResponse_8h.html  HttpRequestResponse_8h_source.html  ImdsClient_8cpp.html  JsonObject_8cpp.html  (+910 more)
docs/html/: Api_8h_source.html  Bootstrap_8h_source.html  DateTime_8cpp.html  EventLoopGroup_8h.html  HMAC_8h.html  HostResolver_8h_source.html  HttpConnectionManager_8h_source.html  HttpConnection_8h.html  HttpConnection_8h_source.html  SocketOptions_8h.html  SocketOptions_8h_source.html  StringUtils_8h.html  _api_8cpp.html  _api_8h.html  _api_8h_source.html  _bootstrap_8cpp.html  _bootstrap_8h.html  _bootstrap_8h_source.html  _c_o_d_e___o_f___c_o_n_d_u_c_t_8md.html  _c_o_n_t_r_i_b_u_t_i_n_g_8md.html  _channel_handler_8cpp.html  _channel_handler_8h.html  _channel_handler_8h_source.html  _config_8h.html  _config_8h_source.html  _credentials_8cpp.html  _credentials_8h.html  _credentials_8h_source.html  (+432 more)
docsrc/: Doxyfile  README.md  SOCKS5_Proxy_Support.md  docs_gen_script.py  index.md  mqtt5_socks5_websocket.md
html/: md__c_o_d_e__o_f__c_o_n_d_u_c_t.html  md__c_o_n_t_r_i_b_u_t_i_n_g.html  md__r_e_a_d_m_e.html  pages.html
integration-testing/: mqtt5_client_test.bash  mqtt5_client_test.md  mqtt5_client_test.py
latex/: md__c_o_n_t_r_i_b_u_t_i_n_g.tex  md__r_e_a_d_m_e.tex  refman.tex
scripts/: gen-crt-min-versions.sh  latest_submodules.py
source/: Api.cpp  ByteBuf.cpp  DateTime.cpp  DnsUtils.cpp  ImdsClient.cpp  JsonObject.cpp  StringUtils.cpp  Types.cpp  UUID.cpp  dns.cpp
tests/: ApiTest.cpp  BddEngineTest.cpp  ByteBufTest.cpp  CMakeLists.txt  CRCTest.cpp  CborTest.cpp  ChannelBootstrapTest.cpp  ChannelHandlerTest.cpp  ChecksumsTest.cpp  CredentialsTest.cpp  DateTimeTest.cpp  DeviceDefenderTest.cpp  EndpointEngineTest.cpp  EventLoopGroupTest.cpp  EventStreamConnectionTest.cpp  HKDFTest.cpp  HMACTest.cpp  HashTest.cpp  HostResolverTest.cpp  HttpClientConnectionManagerTest.cpp  HttpClientTest.cpp  HttpRequestTest.cpp  ImdsClientTest.cpp  IoTSDKMetricsTest.cpp  IotServiceTest.cpp  JsonParserTest.cpp  Mqtt5ClientCredentialsTest.cpp  Mqtt5ClientTest.cpp  MqttClientCredentialsTest.cpp  MqttClientTest.cpp  MqttRequestResponse.cpp  OptionalMemorySafetyTest.cpp  ProxyTest.cpp  RuleEngineTest.cpp  SecureTunnelTest.cpp  Sigv4SigningTest.cpp  Socks5ProxyOptionsTest.cpp  StreamTest.cpp  StringViewTest.cpp  SymmetricCipherTest.cpp  (+7 more)
(+797 files in other folders)
